--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+<!--
     <listener>
         <description>ServletContextListener</description>
         <listener-class>com.luxoft.akkalabs.day1.wikipedia2.web.Init</listener-class>
     </listener>
+    <listener>
+        <description>ServletContextListener</description>
+        <listener-class>com.luxoft.akkalabs.day1.wikipedia2.web.InitContext</listener-class>
+    </listener>
+-->
     <session-config>
         <session-timeout>
             30
