--- a/pom.xml
+++ b/pom.xml
@@ -64,11 +64,15 @@
     </dependencies>
 
     <build>
+        <sourceDirectory>src/main/scala</sourceDirectory>
+        <testSourceDirectory>src/test/scala</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
-                <version>3.2.0</version>
+<!--
+                <version>3.2.2</version>
+-->
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
